Updating page and documentation to reflect latest changes.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
       <h2>Install</h2>
       <ul>
             <li>Download the source files.</li>
-            <li>Edit the <code>public_html/index.php</code> file to adjust config settings: set <code>absolute_url</code> and <code>relative_url</code> to proper values (refer to inline documentation for more details on config values).</li>
-            <li>Optional: you may also want to set the <code>cookie_name</code> value.</li>
+	    <li>Optional: edit the <code>public_html/index.php</code> file to adjust config settings: refer to inline documentation for more details on config values. You may want to set the <code>cookie_name</code> and <code>absolute_url</code> values.</li>
             <li>Point your server to <code>public_html</code>.</li>
             <li>You're good to go!</li>
       </ul>
