Fixing licence information

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         
       <h2>License</h2>
       <p>Licensed under BSD 2-Clause License.<br /><br />
-          Copyright © 2011 Paulina Budzoń. All rights reserved.
+          Copyright © 2011 - 2012 Paulina Budzoń. All rights reserved.
           <br /><br />
           Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
           <br /><br />
